added a footer to the page, updated site description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio website for a learning software/frontend developer."
+      content="Claudio Skala is an aspiring junior web developer. He is currently looking for as a junior web developer or in IT, which he went to school for. He is currently enrolled in Devslopes to aid his Web Developer career. He is looking for opportunities to work with a team of developers to build amazing web applications."
     />
     <script
       async
